# django-practice

./: .gitignore  README.md  manage.py  pyproject.toml
api/: views.py
django_practice/: settings.py  urls.py
polls/: models.py  views.py
polls/migrations/: 0001_initial.py
